--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,8 @@ dependencies:
   flutter_screenutil: ^5.9.3
   google_fonts: ^6.3.2
   flutter_easyloading: ^3.0.5
-
+  shared_preferences: ^2.5.3
+  http: ^1.5.0
 
 dev_dependencies:
   flutter_test:
