--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_easyloading: ^3.0.5
   shared_preferences: ^2.5.3
   http: ^1.5.0
+  country_picker: ^2.0.20
 
 dev_dependencies:
   flutter_test:
